<resources>
    <string name="app_name">whoiszimvo</string>
    <string name="userOfUser">smiso</string>
    <string name="userProfileAvatar">avatar</string>
    <string name="userProfileLevel">achievements</string>
    <string name="artistBio">"Mr. Big Stuff" by \nJean Knight</string>
    <string name="artistImage" />
    <string name="welcome">Welcome to \nThe Guessing Game</string>
    <string name="desc">Where you try to guess who/what the object is from the short given description</string>

    <string name="q1">Stage name of Kwaito star commonly know for the hit "Rhodoba"</string>
    <string name="q1_hint">His stage name is his actual first name</string>
    <string name="lyrics">Mr. Big Stuff         \nWho do you think you are         \nMr. Big Stuff         \nYou\'re never gonna get my love          \n\nNow because you wear all those fancy clothes (oh yeah)         \nAnd have a big fine car, oh yes you do now         \nDo you think I can afford to give you my love (oh yeah)         \nYou think you\'re higher than every star above          \n\nMr. Big Stuff         \nWho do you think you are         \nMr. Big Stuff         \nYou\'re never gonna get my love          \n\nNow I know all the girls I\'ve seen you with         \nI know you broke their hearts one after another now, bit by bit         \nYou made \'em cry, many poor girls cry         \nWhen they try to keep you happy, they just try to keep you satisfied          \n\nMr. Big Stuff, tell me, tell me         \nWho do you think you are         \nMr. Big Stuff         \nYou\'re never gonna get my love          \n\nI\'d rather give my love to a poor guy that has a love that\'s true (oh yeah)         \nThan to be fooled around and get hurt by you         \n\'Cause when I give my love, I want love in return (oh yeah)         \nNow I know this is a lesson Mr. Big Stuff you haven\'t learned          \n\nMr. Big Stuff, tell me         \nWho do you think you are         \nMr. Big Stuff         \nYou\'re never gonna get my love          \n\nMr. Big Stuff         \nYou\'re never gonna break my heart         \nMr. Big Stuff         \nYou\'re never gonna make me cry          \n\nMr. Big Stuff, tell me         \nJust who do you think you are         \nMr. Big Stuff         \nYou\'re never gonna get my love          \n\nMr. Big Stuff         \nYou\'re never gonna break my heart         \nMr. Big Stuff         \nYou\'re never gonna make me cry          \n\nMr. Big Stuff, tell me, tell me         \nJust who do you think you are         \nMr. Big Stuff         \nYou\'re never gonna get my love</string>
    <string name="artistBioo2">\"How High\" \nby J. Cole</string>
    <string name="lyrics2">Whats love got to do, go to do with it         \nI get a little taste then I’m through with it         \nThen I send it right back to you with it          \nWhats love got to do, go to do with it         \nI get a little taste then I’m through with it         \nThen I send it right back to you with it                  \n\nVisionary play your position, no missionary         \nBut yet I pack Gospel in the quotes I spoke         \nYou listening to the most high like the Pope on dope         \nNow picture that         \nMy poetry’s deep now fish for that         \nOnly real niggas catch something, phoney niggas fail         \nShit you gotta feel like it’s only read in braille         \nBoth did the crime but his homie didn’t tell         \nSo he fucking bitches while he sitting lonely in a cell         \nThinking well, what the hell I been on         \nThey gave a nigga five then they threw another ten on         \nBy the time I’m back on the streets like a bachelor         \nI gotta play the clubs like an old ass woman         \nLife is a movie, pick your own role         \nClimb your own ladder or you dig your own hole         \nSit around crying that\'s like sitting round dying         \nYou wanna touch the sky bitch you figure out flying                  \n\nNigga how high, so high that I could touch the sky         \nHow sick, so sick that I could fuck yo’ bitch         \nNigga please, my squad stack plenty of G’s         \nAnd if your girl like to smoke we got plenty of trees          \n\nNigga how high, so high that I could touch the sky         \nHow sick, so sick that I could fuck yo’ bitch         \nNigga please, my squad stack plenty of G’s         \nAnd if your girl like to smoke we got plenty of trees          \n\nHey, as the troubles of the world unfurl         \nMy niggas hit the trees like squirrels         \nTryna get a nut with your girl         \nThink I need to quit trying ‘fore some nigga out there try to hit mine         \nKarma for the karma sutra         \nA lot calmer when the ganja’s through ya         \nYou need ya armour cause them niggas out here tryna shoot ya         \nKinda crucial, police piranha, gon snatch you out that Honda         \nFor stashing that marijuana         \nYes, ya honour, I feel ashamed         \nI broke the law but look I’ll never smoke or steal again         \nIn your courtroom wylin’ out, I don’t mean to keep smiling         \nBut right now I’m high enough to probably steal a plane         \nMan, just look at me, what if I couldn’t read?         \nWould you throw the book at me         \nWhat if I’m feeling sad, am I supposed to look happy         \nIt’s been a long time coming         \nTell my nigga roll me up something          \n\nNo I don/\'t smoke, maybe once in a blue         \nWhen the tention gets thick than there’s nothing to do         \nThrough the windows of my soul, open the blind         \nMy eyes get shut but I open my mind          \n\nHow high, la la la la         \nhow high, hey hey hey         \nhow high, yeah yeah yeah yeah         \nHow high, la la la la          \n\nIs that a shot that you threw little man?         \nI understand, you frustrated career ain\'t going how you planned         \nMake it worse, you’re friends, now when they talk rap         \nAll you hear is “J Cole this” and “J Cole that”         \nIt must be hard for your projects to take all that         \nI know your weak heart gotta break off that         \nBoy, look, Cole World this is your worst fear         \nI’m burning you niggas and I’m only in first gear         \nI’m serving you niggas this is only the first beer         \n12 months from now, you’ll be having the worst year         \nNo tears for the haters, I’m still counting money         \nCole ain\'t dropping, that\'s real fucking funny         \nGrade A dummy, sleeping on a nigga raps         \nSomething like a mummy         \nBut I’mma wake yo’ ass up         \nSomething like your mommy on school day         \nI smoke two l’s with ya girl this is Cool J          \n\nHow high         \nHow high         \nHow high, yeah         \nHow high, yeah          \n\nWhat\'s love got to do, got to do with it         \nI get a little taste then I’m through with it         \nYeah I send it right back to you with it</string>
    <string name="buttondone">Done</string>
</resources>