<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/userName"
        style="@style/userNameStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/glowingStar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/userProfileLevel"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/smallPadding"
        android:paddingEnd="@dimen/smallPadding"
        android:text="@string/desc"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/question1"
        style="@style/userNameStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/smallPadding"
        android:paddingEnd="@dimen/bigPadding"
        android:text="@string/q1" />

    <EditText
        android:id="@+id/answer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/q1_hint"
        android:inputType="textPersonName"
        android:paddingStart="@dimen/smallPadding"
        android:paddingEnd="@dimen/smallPadding" />

    <TextView
        android:id="@+id/answer1Reveal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:paddingStart="@dimen/smallPadding"
        android:paddingEnd="@dimen/bigPadding"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/textSize"
        android:visibility="gone" />

    <Button
        android:id="@+id/doneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="@dimen/layoutMargin"
        android:layout_marginEnd="@dimen/padding"
        android:fontFamily="@font/roboto"
        android:text="@string/buttondone"
        app:backgroundTint="@color/teal_700" />


</LinearLayout>